--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Seattle's Best Salmon Cookies - Home</title>
   <!--link rel="stylesheet" href="css/reset.css" type="text/css"-->
+  <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" type="text/css" />
 </head>
 
